[tool.poetry]
name = "demystifygraphrag"
version = "0.1.0"
description = ""
authors = ["benste <benstmrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <=3.12"
graphrag = "^0.2.0"
transformers = "^4.43.3"
llama-cpp-python = "^0.2.84"
torch = "2.3.1"
plotly = "^5.23.0"
ipywidgets = "^8.1.3"
dagster = "^1.7.15"
dagster-webserver = "^1.7.15"
dagster-duckdb = "^0.23.15"
dagster-duckdb-pandas = "^0.23.15"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "demystifygraphrag"